# Cerialize

./: CMakeLists.txt
cmake/Modules/: FindCerialize.cmake
cspec/: CMakeLists.txt  cerialize_internal_spec.c  cerialize_spec.c  main.c
cspec/test/: CMakeLists.txt  cerialize_spec.c  main.c
include/: cerialize.h  cerialize_internal.h
include/cerialize/: cerialize.h  cerialize_internal.h  cerialize_macros.h  cerialize_types.h
include/cspec/: cerialize_internal_spec.h  cerialize_spec.h
install/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  librargs.dylib
install/rargs/: Makefile  cmake_install.cmake
install_from_here/: cerialize_spec  libcerialize.dylib
install_from_here/cspec/: cmake_install.cmake
install_from_here/src/: cmake_install.cmake
rcerialize/: CHANGELOG.rdoc  Manifest.txt  README.rdoc  Rakefile
rcerialize/cspec/: CMakeLists.txt
rcerialize/ext/: CMakeLists.txt
rcerialize/ext/cerialize/: CMakeLists.txt  extconf.rb
rcerialize/ext/cerialize/include/rcerialize/: rcerialize.h  rcerialize_type.h
rcerialize/ext/cspec/: CMakeLists.txt  main.c  rcerialize_pack_spec.c  rcerialize_pack_unpack_spec.c
rcerialize/ext/install_from_here/: CMakeCache.txt  cmake_install.cmake  librcerialize.dylib  rcerialize_cspec
rcerialize/ext/install_from_here/cspec/: cmake_install.cmake
rcerialize/ext/install_from_here/rcerialize/: cmake_install.cmake
rcerialize/ext/rcerialize/: CMakeLists.txt  rcerialize_pack.c  rcerialize_type.c  rcerialize_unpack.c
rcerialize/ext/rcerialize/include/: rcerialize.h
rcerialize/ext/rcerialize/include/cspec/: rcerialize_pack_spec.h  rcerialize_pack_unpack_spec.h  rcerialize_type_spec.h  rcerialize_unpack_spec.h
rcerialize/ext/rcerialize/include/rcerialize/: rcerialize_pack.h  rcerialize_type.h  rcerialize_unpack.h
rcerialize/lib/: rargs.rb
rcerialize/lib/rargs/: rargs.bundle
src/: CMakeLists.txt  cerialize.c  cerialize_internal.c
